--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,131 @@
 body {
-  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.file-uploader-body {
+  margin: 5vw 10vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.title {
+  font-size: 1.4em;
+  margin: 4vw 0;
+  min-width: 500px;
+}
+
+.button-input {
+  display: none;
+}
+
+.button-wrapper {
+  margin: 2vw 0;
+}
+
+button[type="submit"]{
+  padding: 4px ;
+}
+
+.custom-button {
+  text-decoration: none !important;
+  border: 1px black solid;
+  color: black;
+  font-size: 0.9em;
+  width: 90px;
+  height: 20px;
+  border: 1px solid black;
+  background-color: white;
+  white-space: nowrap;
+  margin: 1vw;
+  padding: 7px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.custom-button:hover{
+  background-color: yellow;
+  
+}
+
+button.custom-button {
+  box-sizing : content-box;
+  font : inherit;
+}
+
+.status-wrapper{
+  display: flex;
+  justify-content: center;
+  margin-top: 3vw;
+
+}
+
+.selected-files-wrapper{
+  margin-left: 1vw;
+}
+
+
+.result-wrapper{
+  margin-top: 4vw;
+}
+
+/*loading icon https://loading.io/css/ */
+
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: rgb(0, 0, 0);
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
 }
